k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: its-cart-api
spec:
  selector:
    matchLabels:
      app: its-cart-api
      collection: its-cart-services
  template:
    metadata:
      labels:
        app: its-cart-api
        collection: its-cart-services
    spec:
      imagePullSecrets:
        - name: its-ebattistella-registry
      containers:
        - name: its-api-node
          image: registry.ebattistella.com/its-api-node
---
apiVersion: v1
kind: Service
metadata:
  name: its-cart-api
spec:
  type: ClusterIP
  selector:
    app: its-cart-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: its-cart-frontend
spec:
  selector:
    matchLabels:
      app: its-cart-frontend
      collection: its-cart-services
  template:
    metadata:
      labels:
        app: its-cart-frontend
        collection: its-cart-services
    spec:
      imagePullSecrets:
        - name: its-ebattistella-registry
      containers:
        - name: its-cart-frontend
          image: registry.ebattistella.com/its-cart-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: its-cart-frontend
spec:
  type: ClusterIP
  selector:
    app: its-cart-frontend
  ports:
    - name: http
      port: 7100
      targetPort: 7100
