k8s/ingress.yaml
# ---
# # Middleware
# # Strip prefix /overview
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: its-2023-mw
# spec:
#   stripPrefix:
#     forceSlash: false
#     prefixes:
#       - /2023
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: its-cart-2023-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    # traefik.ingress.kubernetes.io/router.middlewares: its-its-2023-mw@kubernetescrd
spec:
  rules:
    - host: its-cart.ebattistella.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: its-cart-frontend
                port:
                  number: 7100
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: its-cart-api
                port:
                  number: 3000
